Fix ignored phrase overflow/overlap
- Remove `height:` property in CSS.

See: https://github.com/Automattic/jetpack/issues/8702

--- a/_inc/client/components/tags-input/style.scss
+++ b/_inc/client/components/tags-input/style.scss
@@ -1,7 +1,6 @@
 .react-tagsinput {
 	border: 1px solid #e9eff3;
 	padding: rem( 5px );
-	height: rem( 30px );
 }
 
 .react-tagsinput--focused {
